--- a/index2.html
+++ b/index2.html
@@ -17,8 +17,13 @@
             line-height: 1.6;
         }
     </style>
+    <script>
+        function showMessage() {
+            alert("Chào mừng bạn đến với trang web của tôi!");
+        }
+    </script>
 </head>
-<body>
+<body onload="showMessage()">
     <div class="container">
         <h1>Chào mừng đến với trang giới thiệu của tôi!</h1>
         <img src="hinh_anh_cua_ban.jpg" alt="Hình ảnh của bạn" />
