--- a/index2.html
+++ b/index2.html
@@ -1,38 +1,166 @@
 <!DOCTYPE html>
-<html>
+<html lang="vi">
 <head>
-    <title>Trang Giới Thiệu Bản Thân</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-        }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-        }
-        h1, h2 {
-            color: #333;
-        }
-        p {
-            line-height: 1.6;
-        }
-    </style>
-    <script>
-        function showMessage() {
-            alert("Chào mừng bạn đến với trang web của tôi!");
-        }
-    </script>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, viewport-fit=cover" />
+  <title>Happy Matrix</title>
+  <style>
+    html, body { height: 100%; margin: 0; background: #000; overflow: hidden; }
+    canvas { display: block; width: 100vw; height: 100vh; }
+    #hint {
+      position: fixed; left: 12px; bottom: 12px; z-index: 10;
+      color: #b0b0b0; font: 12px/1.35 system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
+      opacity: .75; user-select: none; pointer-events: none;
+      text-shadow: 0 1px 0 rgba(0,0,0,.4);
+    }
+  </style>
 </head>
-<body onload="showMessage()">
-    <div class="container">
-        <h1>Chào mừng đến với trang giới thiệu của tôi!</h1>
-        <img src="hinh_anh_cua_ban.jpg" alt="Hình ảnh của bạn" />
-        <h2>Giới thiệu</h2>
-        <p>Tôi là [Tên của bạn]. Tôi hiện đang sống tại [Địa điểm].</p>
-        <h2>Sở thích</h2>
-        <p>Tôi thích [sở thích của bạn].</p>
-        <h2>Kỹ năng</h2>
-        <p>Tôi có kỹ năng trong [kỹ năng của bạn].</p>
-    </div>
+<body>
+  <canvas id="c"></canvas>
+  <div id="hint">Chạm để dừng/chạy • Tham số: ?msg=HAPPY%20BIRTHDAY&fg=ff69b4&bg=110011&speed=1&density=1</div>
+  <script>
+    (function () {
+      const canvas = document.getElementById('c');
+      const ctx = canvas.getContext('2d');
+
+      // Query params for customization
+      const qp = new URLSearchParams(location.search);
+      let MESSAGE = (qp.get('msg') || 'HAPPY').toUpperCase();
+      const BG = '#' + (qp.get('bg') || '000000');
+      const FG = '#' + (qp.get('fg') || 'ff69b4'); // hồng
+      const DENSITY = clamp(parseFloat(qp.get('density') || '1'), 0.3, 2); // 0.3..2
+      const SPEED = clamp(parseFloat(qp.get('speed') || '1'), 0.2, 3); // 0.2..3
+      const CHARSET = (qp.get('chars') || 'HAPPYBIRTHDAY❤').split('');
+
+      // Device size and DPR handling
+      let W = 0, H = 0, fontSize = 16, columns = 0, drops = [];
+      let playing = true;
+
+      // Offscreen canvas to draw the message mask
+      const mask = document.createElement('canvas');
+      const mctx = mask.getContext('2d', { willReadFrequently: true });
+
+      function clamp(v, a, b){ return Math.max(a, Math.min(b, isNaN(v) ? a : v)); }
+
+      function hexToRgb(hex){
+        const h = hex.replace('#','');
+        const bigint = parseInt(h.length === 3 ? h.split('').map(x=>x+x).join('') : h, 16);
+        return { r: (bigint>>16)&255, g: (bigint>>8)&255, b: bigint&255 };
+      }
+
+      const bgRGB = hexToRgb(BG);
+      const fgRGB = hexToRgb(FG);
+
+      function resize(){
+        const dpr = Math.max(1, Math.min(2, window.devicePixelRatio || 1));
+        // Backing store pixels
+        canvas.width  = Math.floor(innerWidth * dpr);
+        canvas.height = Math.floor(innerHeight * dpr);
+        // CSS size
+        canvas.style.width = innerWidth + 'px';
+        canvas.style.height = innerHeight + 'px';
+        // Normalize drawing units to CSS pixels
+        ctx.setTransform(dpr, 0, 0, dpr, 0, 0);
+
+        W = innerWidth; H = innerHeight;
+
+        // Base font size relative to viewport
+        fontSize = Math.max(12, Math.round(Math.min(W, H) / 25));
+        fontSize = Math.round(fontSize * (1 / Math.sqrt(DENSITY))); // adjust with density
+
+        columns = Math.floor(W / fontSize);
+        drops = new Array(columns).fill(0).map(() => Math.floor(Math.random() * H / fontSize));
+
+        // Prepare mask at CSS pixel size
+        mask.width = W; mask.height = H;
+        drawMask();
+
+        // Paint solid background initially
+        ctx.fillStyle = BG; ctx.fillRect(0, 0, W, H);
+      }
+
+      function drawMask(){
+        const g = mctx;
+        g.clearRect(0, 0, W, H);
+        // Compute font size that fits message into viewport
+        const maxW = W * 0.9;
+        const maxH = H * 0.6;
+        // crude estimate of width per character in monospace: 0.66em
+        let s = Math.min(maxH, maxW / Math.max(1, MESSAGE.length * 0.66));
+        s = Math.max(40, Math.floor(s));
+        g.fillStyle = '#000'; g.fillRect(0, 0, W, H);
+        g.fillStyle = '#fff';
+        g.textAlign = 'center';
+        g.textBaseline = 'middle';
+        g.font = `900 ${s}px \"Courier New\", Consolas, monospace`;
+        g.fillText(MESSAGE, W/2, H/2);
+      }
+
+      function draw(){
+        // Trail effect: translucent fill over previous frame
+        ctx.fillStyle = `rgba(${bgRGB.r}, ${bgRGB.g}, ${bgRGB.b}, ${0.06 * (2 - DENSITY)})`;
+        ctx.fillRect(0, 0, W, H);
+
+        ctx.font = `${fontSize}px \"Courier New\", Consolas, monospace`;
+        ctx.textBaseline = 'top';
+
+        for(let i=0; i<columns; i++){
+          const x = i * fontSize;
+          const y = (drops[i] * fontSize);
+
+          const ch = CHARSET[(Math.random()*CHARSET.length) | 0];
+
+          // Sample mask to know whether this pixel is inside message text
+          let inside = false;
+          if (x >= 0 && y >= 0 && x < W && y < H) {
+            const pixel = mctx.getImageData(x, y, 1, 1).data[0];
+            inside = pixel > 20;
+          }
+
+          if (inside) {
+            ctx.fillStyle = `rgba(${fgRGB.r}, ${fgRGB.g}, ${fgRGB.b}, 1)`;
+            ctx.shadowColor = `rgba(${fgRGB.r}, ${fgRGB.g}, ${fgRGB.b}, .35)`;
+            ctx.shadowBlur = Math.max(4, Math.floor(fontSize/4));
+          } else {
+            // darker pinks/purples for background stream
+            const a = 0.55 + Math.random()*0.2;
+            ctx.fillStyle = `rgba(${Math.floor(fgRGB.r*0.45)}, ${Math.floor(fgRGB.g*0.2)}, ${Math.floor(fgRGB.b*0.45)}, ${a})`;
+            ctx.shadowColor = 'transparent';
+            ctx.shadowBlur = 0;
+          }
+
+          ctx.fillText(ch, x, y);
+
+          // Move drop
+          drops[i] += SPEED * (inside ? 0.9 : 1.1);
+
+          if (y > H && Math.random() > (0.975 - 0.2*(SPEED-1))) {
+            drops[i] = 0;
+          }
+        }
+
+        if (playing) requestAnimationFrame(draw);
+      }
+
+      // Play/pause on tap/click
+      window.addEventListener('pointerdown', () => {
+        playing = !playing;
+        if (playing) requestAnimationFrame(draw);
+      }, { passive: true });
+
+      // Redraw on resize and when the address bar hides on mobile
+      window.addEventListener('resize', () => { resize(); }, { passive: true });
+      window.addEventListener('orientationchange', () => setTimeout(resize, 100));
+
+      resize();
+      requestAnimationFrame(draw);
+
+      // Allow live change of message if hash changes, e.g., #HELLO
+      window.addEventListener('hashchange', () => {
+        const h = decodeURIComponent(location.hash.replace('#','')).trim();
+        if (h) { MESSAGE = h.toUpperCase(); drawMask(); }
+      });
+    })();
+  </script>
 </body>
 </html>
